--- a/templates/Home.html
+++ b/templates/Home.html
@@ -175,9 +175,7 @@
         <a href="/">Home</a>
         <a href="/predict">Predict My Adaptivity</a>
         <a href="/adapt">Increase My Adaptivity</a>
-        <a href="updates.html">Daily Updates</a>
-        <a href="Bolly.html">Bollywood Mania</a>
-        <a href="Horo.html">Horoscope for Today</a>
+        <a href="/resources">Learning Resources</a>
     </div>
 
     <!-- Hero Section -->
