--- a/templates/Index.html
+++ b/templates/Index.html
@@ -185,8 +185,7 @@
         <a href="/">Home</a>
         <a href="/predict">Predict My Adaptivity</a>
         <a href="/adapt">Increase My Adaptivity</a>
-        <a href="#">Bollywood Mania</a>
-        <a href="#">Horoscope</a>
+        <a href="/resources">Learning Resources</a>
     </div>
 
     <!-- Hero Section -->
